fix: fix nav-links overlapping css styles

--- a/static/css/messaging-pages.css
+++ b/static/css/messaging-pages.css
@@ -135,7 +135,7 @@
     color: white;
 }
 
-.navigation-actions {
+.inbox.navigation-actions {
     display: flex;
     justify-content: center;
 }
